Actualización de Portfolio

--- a/src/app/main/education/education.component.html
+++ b/src/app/main/education/education.component.html
@@ -3,31 +3,46 @@
     <h2 class="display-6 mb-3 h2-lines">Educación</h2>
 
     <ul class="row justify-content-center list-unstyled mt-3">
-
       <li class="col-12 card mb-3">
         <div class="row g-0">
           <div class="col-md-4 d-flex align-items-center">
             <div class="edu-img">
-              <img src="../../../assets/images/ArgentinaPrograma_v2.jpg" alt="Argentina Programa" class="img-fluid" />
+              <img
+                src="../../../assets/images/Logo-UBA-nuevo-blanco.png"
+                alt="Diplomatura SIG"
+                class="img-fluid"
+              />
             </div>
           </div>
 
           <div class="col-md-8">
             <div class="card-body">
               <h4 class="card-title display-6 text-center">
-                Full Stack Jr
+                Diplomatura en Análisis Exploratorio de Datos Espaciales
+                aplicados a las Ciencias Sociales
               </h4>
               <p class="card-text fs-4">
-                #YoProgramo es la segunda etapa del plan Argentina Programa. En esta capacitación se aprenden distintas herramientas y tecnologías tanto para el Frontend como Backend. Para el Frontend se utiliza HTML, CSS y Javascript, dentro del framework de Angular., mientra que para la parte de Backend y Base de datos se utiliza Java y SQL (MySQL). Además, se aprende sobre el uso de Github para crear nuestros propios repositorios
+                Curso de postgrado dictada por la Facultad de Filosofía y Letras
+                de la Universidad de Buenos Aires. El conjunto de acciones
+                pensadas para esta Diplomatura permitirá desarrollar elementos
+                que colaboren en la construcción de saberes, los que tienen como
+                finalidad asistir a los participantes frente a los nuevos
+                desafíos que plantea el manejo de grandes volúmenes de datos e
+                información
               </p>
               <div class="row justify-content-between">
                 <div class="col-md">
                   <p class="fs-5">
-                    <span class="fw-bolder">Período:</span>Febrero-Agosto 2022
+                    <span class="fw-bolder">Período:</span> Abril - Noviembre
+                    2023
                   </p>
                 </div>
                 <div class="col-md text-center">
-                  <a href="#" class="btn btn-lg">Más info</a>
+                  <p
+                    class="bg-warning text-dark rounded px-4 py-2 mb-0 d-inline-block fs-5"
+                  >
+                    En Curso
+                  </p>
                 </div>
               </div>
             </div>
@@ -39,7 +54,186 @@
         <div class="row g-0">
           <div class="col-md-4 d-flex align-items-center">
             <div class="edu-img">
-              <img src="../../../assets/images/CodoACodo.jpg" alt="Codo a Codo" class="img-fluid" />
+              <img
+                src="../../../assets/images/Logo-UBA-nuevo-blanco.png"
+                alt="Diplomatura SIG"
+                class="img-fluid"
+              />
+            </div>
+          </div>
+
+          <div class="col-md-8">
+            <div class="card-body">
+              <h4 class="card-title display-6 text-center">
+                Diplomatura en Sistemas de Información Geográfica orientados a
+                la visualización de problemáticas espaciales
+              </h4>
+              <p class="card-text fs-4">
+                Curso de postgrado dictada por la Facultad de Filosofía y Letras
+                de la Universidad de Buenos Aires. Esta Diplomatura propone
+                presentar herramientas que faciliten la exploración, análisis y
+                comprensión del territorio a partir de las nuevas tecnologías
+                visuales disponibles en gestores web de datos públicos.
+              </p>
+              <div class="row justify-content-between">
+                <div class="col-md">
+                  <p class="fs-5">
+                    <span class="fw-bolder">Período:</span>Abril-Diciembre 2022
+                  </p>
+                </div>
+                <div class="col-md text-center">
+                  <a
+                    target="_blank"
+                    href="https://drive.google.com/file/d/1XLo1plPtvvXEOS7jQjSwAqtST4u54yG8/view"
+                    class="btn btn-lg"
+                    >Ver Certificado</a
+                  >
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </li>
+
+      <li class="col-12 card mb-3">
+        <div class="row g-0">
+          <div class="col-md-4 d-flex align-items-center">
+            <div class="edu-img">
+              <img
+                src="../../../assets/images/UNS.png"
+                alt="Especialización en Ciencia de Datos"
+                class="img-fluid"
+              />
+            </div>
+          </div>
+
+          <div class="col-md-8">
+            <div class="card-body">
+              <h4 class="card-title display-6 text-center">
+                Especialización en Ciencia de Datos
+              </h4>
+              <p class="card-text fs-4">
+                Curso de postgrado dictado por el Departamento de Ciencias e
+                Ingenierías de la Computación (DCIC) en la Universidad Nacional
+                del Sur. Este programa busca crear capacidades en los
+                profesionales que trabajen o colaboren con organizaciones que
+                necesiten comprender datos, como así también capacitar en las
+                actividades relacionadas al análisis de datos, satisfaciendo la
+                gran demanda por la formación de especialistas en este campo.
+              </p>
+              <div class="row justify-content-between">
+                <div class="col-md">
+                  <p class="fs-5">
+                    <span class="fw-bolder">Período:</span> Agosto 2022 - Julio
+                    2023
+                  </p>
+                </div>
+                <div class="col-md text-center">
+                  <p
+                    class="bg-warning text-dark rounded px-4 py-2 mb-0 d-inline-block fs-5"
+                  >
+                    Finalizado
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </li>
+
+      <li class="col-12 card mb-3">
+        <div class="row g-0">
+          <div class="col-md-4 d-flex align-items-center">
+            <div class="edu-img">
+              <img
+                src="../../../assets/images/CodoACodo.jpg"
+                alt="Especialización en Django"
+                class="img-fluid"
+              />
+            </div>
+          </div>
+
+          <div class="col-md-8">
+            <div class="card-body">
+              <h4 class="card-title display-6 text-center">
+                Especialización en Django
+              </h4>
+              <p class="card-text fs-4">
+                Complemento del curso de Full Stack del programa Codo a Codo,
+                donde se profundizan conceptos y conocimientos sobre el lenguaje
+                de programación Python y el framework Django.
+              </p>
+              <div class="row justify-content-between">
+                <div class="col-md">
+                  <p class="fs-5">
+                    <span class="fw-bolder">Período:</span>Agosto-Diciembre 2022
+                  </p>
+                </div>
+                <div class="col-md text-center">
+                  <a
+                    href="https://drive.google.com/file/d/10xtndQ5KwIT8ziOOViOBMRDn7N0vv8ur/view"
+                    class="btn btn-lg"
+                    >Ver Certificado</a
+                  >
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </li>
+
+      <li class="col-12 card mb-3">
+        <div class="row g-0">
+          <div class="col-md-4 d-flex align-items-center">
+            <div class="edu-img">
+              <img
+                src="../../../assets/images/ArgentinaPrograma_v2.jpg"
+                alt="Argentina Programa"
+                class="img-fluid"
+              />
+            </div>
+          </div>
+
+          <div class="col-md-8">
+            <div class="card-body">
+              <h4 class="card-title display-6 text-center">Full Stack Jr</h4>
+              <p class="card-text fs-4">
+                #YoProgramo es la segunda etapa del plan Argentina Programa. En
+                esta capacitación se aprenden distintas herramientas y
+                tecnologías tanto para el Frontend como Backend. Para el
+                Frontend se utiliza HTML, CSS y Javascript, dentro del framework
+                de Angular., mientra que para la parte de Backend y Base de
+                datos se utiliza Java y SQL (MySQL). Además, se aprende sobre el
+                uso de Github para crear nuestros propios repositorios
+              </p>
+              <div class="row justify-content-between">
+                <div class="col-md">
+                  <p class="fs-5">
+                    <span class="fw-bolder">Período:</span>Febrero-Agosto 2022
+                  </p>
+                </div>
+                <div class="col-md text-center">
+                  <a
+                    href="https://drive.google.com/file/d/170TR6envm089McYXhRY1PNB6AdeGvV10/view"
+                    class="btn btn-lg"
+                    >Ver Certificado</a
+                  >
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </li>
+
+      <li class="col-12 card mb-3">
+        <div class="row g-0">
+          <div class="col-md-4 d-flex align-items-center">
+            <div class="edu-img">
+              <img
+                src="../../../assets/images/CodoACodo.jpg"
+                alt="Codo a Codo"
+                class="img-fluid"
+              />
             </div>
           </div>
 
@@ -49,7 +243,11 @@
                 Full Stack Jr Con Python
               </h4>
               <p class="card-text fs-4">
-                Es uno de los cursos del programa Codo a Codo, donde se adquieren conocimientos sobre tecnologías y herramientas de Frontend y Backend. Para la parte de Frontend se utiliza HTML, SCSS y Javascript, mientras que para la parte de Backend se utiliza el framework Django (Python) y MySQL (SQL).
+                Es uno de los cursos del programa Codo a Codo, donde se
+                adquieren conocimientos sobre tecnologías y herramientas de
+                Frontend y Backend. Para la parte de Frontend se utiliza HTML,
+                SCSS y Javascript, mientras que para la parte de Backend se
+                utiliza el framework Django (Python) y MySQL (SQL).
               </p>
               <div class="row justify-content-between">
                 <div class="col-md">
@@ -58,7 +256,11 @@
                   </p>
                 </div>
                 <div class="col-md text-center">
-                  <a href="#" class="btn btn-lg">Más info</a>
+                  <a
+                    href="https://drive.google.com/file/d/1P-6_Tm-VvhU19ll41X7beaysltpUjJ-T/view"
+                    class="btn btn-lg"
+                    >Ver Certificado</a
+                  >
                 </div>
               </div>
             </div>
@@ -70,26 +272,37 @@
         <div class="row g-0">
           <div class="col-md-4 d-flex align-items-center">
             <div class="edu-img">
-              <img src="../../../assets/images/ICARO.jpg" alt="Pachorra" class="img-fluid" />
+              <img
+                src="../../../assets/images/ICARO.jpg"
+                alt="Pachorra"
+                class="img-fluid"
+              />
             </div>
           </div>
 
           <div class="col-md-8">
             <div class="card-body">
               <h4 class="card-title display-6 text-center">
-                Diplomado en Desarrollo Web Full Stack
+                Diplomatura en en Desarrollo Web Full Stack
               </h4>
               <p class="card-text fs-4">
-                Diplomatura dictada por la Universidad de Córdoba e ICARO, donde se adquieren conocimientos y habilidades en HTML, SCSS/CSS, Javascript, NodeJS, MySQL, GIT, entre otras herramientas.
+                Diplomatura dictada por la Universidad de Córdoba e ICARO, donde
+                se adquieren conocimientos y habilidades en HTML, SCSS/CSS,
+                Javascript, NodeJS, MySQL, GIT, entre otras herramientas.
               </p>
               <div class="row justify-content-between">
                 <div class="col-md">
                   <p class="fs-5">
-                    <span class="fw-bolder">Período:</span> 2021-2022
+                    <span class="fw-bolder">Período:</span> Julio 2021 - Febrero
+                    2022
                   </p>
                 </div>
                 <div class="col-md text-center">
-                  <a href="#" class="btn btn-lg">Más info</a>
+                  <a
+                    href="https://drive.google.com/file/d/1aPWjZUPmjbL6H8FmzbgE2Z-55sDli8am/view"
+                    class="btn btn-lg"
+                    >Ver Certificado</a
+                  >
                 </div>
               </div>
             </div>
@@ -101,7 +314,11 @@
         <div class="row g-0">
           <div class="col-md-4 d-flex align-items-center">
             <div class="edu-img">
-              <img src="../../../assets/images/Logo-UBA-nuevo-blanco.png" alt="UBA" class="img-fluid" />
+              <img
+                src="../../../assets/images/Logo-UBA-nuevo-blanco.png"
+                alt="UBA"
+                class="img-fluid"
+              />
             </div>
           </div>
 
@@ -123,7 +340,11 @@
                   </p>
                 </div>
                 <div class="col-md text-center">
-                  <a href="#" class="btn btn-lg">Más info</a>
+                  <p
+                    class="bg-warning text-dark rounded px-4 py-2 mb-0 d-inline-block fs-5"
+                  >
+                    Finalizado
+                  </p>
                 </div>
               </div>
             </div>
@@ -135,7 +356,11 @@
         <div class="row g-0">
           <div class="col-md-4 d-flex align-items-center">
             <div class="edu-img">
-              <img src="../../../assets/images/UNS.png" alt="Norita" class="img-fluid" />
+              <img
+                src="../../../assets/images/UNS.png"
+                alt="Norita"
+                class="img-fluid"
+              />
             </div>
           </div>
 
@@ -157,7 +382,11 @@
                   </p>
                 </div>
                 <div class="col-md text-center">
-                  <a href="#" class="btn btn-lg">Más info</a>
+                  <a
+                    href="https://drive.google.com/file/d/1baMjkk-Km5Xt9QGy6ACU6T2RdkP3P_4q/view"
+                    class="btn btn-lg"
+                    >Ver Título</a
+                  >
                 </div>
               </div>
             </div>
