--- a/src/app/main/projects/projects.component.html
+++ b/src/app/main/projects/projects.component.html
@@ -2,9 +2,106 @@
   <div class="container py-4">
     <h2 class="display-6 mb-3 h2-lines">Proyectos</h2>
     <!-- <p class="fs-4">Estos son los proyectos realizados:</p> -->
-
     <div class="row justify-content-center projects-container">
-      <div class="col-lg-6">
+      <div class="col-lg-6 mb-4">
+        <div class="card shadow m-3 card-height">
+          <div>
+            <img
+              src="../../../assets/images/Cryptos_App.PNG"
+              alt="Citas App"
+              class="img-fluid project-image"
+            />
+          </div>
+          <div class="card-body">
+            <h5 class="card-title display-6 text-center">Crytpos App</h5>
+            <p class="card-text fs-4 text-justify">
+              App de Conversión de Divisas en Cryptos. Proyeto realizado en
+              ReactJs utilizando Tailwindcss y una API de criptomonedas
+            </p>
+          </div>
+          <div class="row justify-content-between card-footer">
+            <div class="col-md">
+              <p class="fs-4"><span class="fw-bolder">Año:</span> 2023</p>
+            </div>
+            <div class="col-md text-center">
+              <a
+                href="https://profound-parfait-5d3132.netlify.app/"
+                class="btn btn-lg"
+                target="blank"
+                >Ver Proyecto</a
+              >
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-lg-6 mb-4">
+        <div class="card shadow m-3 card-height">
+          <div>
+            <img
+              src="../../../assets/images/Control_de_Gastos_App.PNG"
+              alt="Control de Gastos App"
+              class="img-fluid project-image"
+            />
+          </div>
+          <div class="card-body">
+            <h5 class="card-title display-6 text-center">
+              Control de Gastos App
+            </h5>
+            <p class="card-text fs-4 text-justify">
+              App de Planificación de Gastos. Proyeto realizado en ReactJs
+              utilizando Tailwindcss
+            </p>
+          </div>
+          <div class="row justify-content-between card-footer">
+            <div class="col-md">
+              <p class="fs-4"><span class="fw-bolder">Año:</span> 2023</p>
+            </div>
+            <div class="col-md text-center">
+              <a
+                href="https://coruscating-kringle-a3e348.netlify.app/"
+                class="btn btn-lg"
+                target="blank"
+                >Ver Proyecto</a
+              >
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-lg-6 mb-4">
+        <div class="card shadow m-3 card-height">
+          <div>
+            <img
+              src="../../../assets/images/Citas_Mascotas_App.PNG"
+              alt="Citas App"
+              class="img-fluid project-image"
+            />
+          </div>
+          <div class="card-body">
+            <h5 class="card-title display-6 text-center">Mascotas App</h5>
+            <p class="card-text fs-4 text-justify">
+              App de Seguimiento de Mascotas. Proyeto realizado en ReactJs
+              utilizando Tailwindcss
+            </p>
+          </div>
+          <div class="row justify-content-between card-footer">
+            <div class="col-md">
+              <p class="fs-4"><span class="fw-bolder">Año:</span> 2023</p>
+            </div>
+            <div class="col-md text-center">
+              <a
+                href="https://fanciful-pastelito-93fb4a.netlify.app"
+                class="btn btn-lg"
+                target="blank"
+                >Ver Proyecto</a
+              >
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-lg-6 mb-4">
         <div class="card shadow m-3 card-height">
           <div>
             <img
@@ -14,9 +111,12 @@
             />
           </div>
           <div class="card-body">
-            <h5 class="card-title display-5 text-center">Coffee Break</h5>
-            <p class="card-text fs-4 text-justify ">
-              Trabajo Práctico Obligatorio para el programa Codo a Codo.<br> Apasionado por la programación y el café, decidí combinar ambos y surgió "Coffe Break". Es un Sitio Web estático y responsivo realizado con HTML, SCSS, JavaScript y GIT.<br>
+            <h5 class="card-title display-6 text-center">Coffee Break</h5>
+            <p class="card-text fs-4 text-justify">
+              Trabajo Práctico Obligatorio para el programa Codo a Codo.<br />
+              Apasionado por la programación y el café, decidí combinar ambos y
+              surgió "Coffe Break". Es un Sitio Web estático y responsivo
+              realizado con HTML, SCSS, JavaScript y GIT.<br />
               <strong>¡Un café siempre es una buena idea!</strong>
             </p>
           </div>
@@ -25,7 +125,10 @@
               <p class="fs-4"><span class="fw-bolder">Año:</span> 2022</p>
             </div>
             <div class="col-md text-center">
-              <a href="https://ppagano91.github.io/TPO_Coffe-Break/" class="btn btn-lg" target="blank"
+              <a
+                href="https://ppagano91.github.io/TPO_Coffe-Break/"
+                class="btn btn-lg"
+                target="blank"
                 >Ver Proyecto</a
               >
             </div>
@@ -33,7 +136,7 @@
         </div>
       </div>
 
-      <div class="col-lg-6">
+      <div class="col-lg-6 mb-4">
         <div class="card shadow m-3 card-height">
           <div>
             <img
@@ -43,9 +146,11 @@
             />
           </div>
           <div class="card-body">
-            <h5 class="card-title display-5 text-center">Pokemon Web</h5>
-            <p class="card-text fs-4 text-justify ">
-              Sitio Web estático realizado durante el curso de Desarrollo Web Full Stack donde utilicé la API de Pokémon para hacer peticiones. Las tecnologías utilizadas con HTML, SCSS y Javascript
+            <h5 class="card-title display-6 text-center">Pokemon Web</h5>
+            <p class="card-text fs-4 text-justify">
+              Sitio Web estático realizado durante el curso de Desarrollo Web
+              Full Stack donde utilicé la API de Pokémon para hacer peticiones.
+              Las tecnologías utilizadas con HTML, SCSS y Javascript
             </p>
           </div>
           <div class="row justify-content-between card-footer">
@@ -61,10 +166,8 @@
               >
             </div>
           </div>
-
         </div>
       </div>
-
     </div>
   </div>
 </section>
