--- a/src/app/main/skills/skills.component.html
+++ b/src/app/main/skills/skills.component.html
@@ -4,97 +4,247 @@
     <h4 class="display-7 mb-3">Tecnologías</h4>
     <ul class="row justify-content-center list-unstyled">
       <li class="col-sm">
-        <img src="../../../assets/images/skills/QGIS.png" alt="" class="sk-img" />
-        <!-- <p class="fs-4 text-center">QGIS</p> -->
+        <circle-progress
+          [percent]="80"
+          [radius]="50"
+          [showInnerStroke]="false"
+          [space]="10"
+          [outerStrokeWidth]="5"
+          [outerStrokeColor]="'#78C000'"
+          [animation]="true"
+          [animationDuration]="500"
+          [imageSrc]="'../../../assets/images/skills/QGIS.png'"
+          [showImage]="true"
+          [imageHeight]="50"
+          [imageWidth]="50"
+        ></circle-progress>
       </li>
 
       <li class="col-sm">
-        <img src="../../../assets/images/skills/Microsoft_Office.png" alt="" class="sk-img" />
-        <!-- <p class="fs-4 text-center">Paquete Office</p> -->
+        <circle-progress
+          [percent]="40"
+          [radius]="50"
+          [showInnerStroke]="false"
+          [space]="10"
+          [outerStrokeWidth]="5"
+          [outerStrokeColor]="'#FF0000'"
+          [animation]="true"
+          [animationDuration]="500"
+          [imageSrc]="'../../../assets/images/skills/angular2.png'"
+          [showImage]="true"
+          [imageHeight]="50"
+          [imageWidth]="50"
+        ></circle-progress>
       </li>
 
       <li class="col-sm">
-        <img src="../../../assets/images/skills/angular2.png" alt="" class="sk-img" />
-        <!-- <p class="fs-4 text-center">Angular</p> -->
+        <circle-progress
+          [percent]="70"
+          [radius]="50"
+          [showInnerStroke]="false"
+          [space]="10"
+          [outerStrokeWidth]="5"
+          [outerStrokeColor]="'#00C9FF'"
+          [animation]="true"
+          [animationDuration]="500"
+          [imageSrc]="'../../../assets/images/skills/ReactJS.png'"
+          [showImage]="true"
+          [imageHeight]="50"
+          [imageWidth]="50"
+        ></circle-progress>
       </li>
 
       <li class="col-sm">
-        <img src="../../../assets/images/skills/ReactJS.png" alt="" class="sk-img" />
-        <!-- <p class="fs-4 text-center">React</p> -->
+        <circle-progress
+          [percent]="60"
+          [radius]="50"
+          [showInnerStroke]="false"
+          [space]="10"
+          [outerStrokeWidth]="5"
+          [outerStrokeColor]="'#02004F'"
+          [animation]="true"
+          [animationDuration]="500"
+          [imageSrc]="'../../../assets/images/skills/django4.png'"
+          [showImage]="true"
+          [imageHeight]="50"
+          [imageWidth]="50"
+        ></circle-progress>
       </li>
 
       <li class="col-sm">
-        <img src="../../../assets/images/skills/django4.png" alt="" class="sk-img" />
-        <!-- <p class="fs-4 text-center">Django</p> -->
+        <circle-progress
+          [percent]="80"
+          [radius]="50"
+          [showInnerStroke]="false"
+          [space]="10"
+          [outerStrokeWidth]="5"
+          [outerStrokeColor]="'#02459B'"
+          [animation]="true"
+          [animationDuration]="500"
+          [imageSrc]="'../../../assets/images/skills/Postgresql.png'"
+          [showImage]="true"
+          [imageHeight]="50"
+          [imageWidth]="50"
+        ></circle-progress>
       </li>
 
       <li class="col-sm">
-        <img src="../../../assets/images/skills/Postgresql.png" alt="" class="sk-img" />
-        <!-- <p class="fs-4 text-center">PostgreSQL</p> -->
+        <circle-progress
+          [percent]="60"
+          [radius]="50"
+          [showInnerStroke]="false"
+          [space]="10"
+          [outerStrokeWidth]="5"
+          [outerStrokeColor]="'#000000'"
+          [animation]="true"
+          [animationDuration]="500"
+          [imageSrc]="'../../../assets/images/skills/flask2.png'"
+          [showImage]="true"
+          [imageHeight]="50"
+          [imageWidth]="50"
+        ></circle-progress>
       </li>
-
-      <li class="col-sm">
-        <img src="../../../assets/images/skills/flask2.png" alt="" class="sk-img" />
-        <!-- <p class="fs-4 text-center">Flask</p> -->
-      </li>
-
     </ul>
     <h4 class="display-7 mb-3 mt-5">Lenguajes de Programación</h4>
     <ul class="row justify-content-center list-unstyled">
       <li class="col-sm">
-        <img src="../../../assets/images/skills/python.png" alt="Cantar" class="sk-img" />
-        <!-- <p class="fs-4 text-center">Python</p> -->
+        <circle-progress
+          [percent]="80"
+          [radius]="50"
+          [showInnerStroke]="false"
+          [space]="10"
+          [outerStrokeWidth]="5"
+          [outerStrokeColor]="'#02459B'"
+          [animation]="true"
+          [animationDuration]="500"
+          [imageSrc]="'../../../assets/images/skills/python.png'"
+          [showImage]="true"
+          [imageHeight]="50"
+          [imageWidth]="50"
+        ></circle-progress>
       </li>
 
       <li class="col-sm">
-        <img src="../../../assets/images/skills/javascript.png" alt="" class="sk-img" />
-        <!-- <p class="fs-4 text-center">Javascript</p> -->
+        <circle-progress
+          [percent]="80"
+          [radius]="50"
+          [showInnerStroke]="false"
+          [space]="10"
+          [outerStrokeWidth]="5"
+          [outerStrokeColor]="'#F1F900'"
+          [animation]="true"
+          [animationDuration]="500"
+          [imageSrc]="'../../../assets/images/skills/javascript.png'"
+          [showImage]="true"
+          [imageHeight]="50"
+          [imageWidth]="50"
+        ></circle-progress>
       </li>
 
       <li class="col-sm">
-        <img src="../../../assets/images/skills/sql3.png" alt="" class="sk-img" />
-        <!-- <p class="fs-4 text-center">SQL</p> -->
+        <circle-progress
+          [percent]="80"
+          [radius]="50"
+          [showInnerStroke]="false"
+          [space]="10"
+          [outerStrokeWidth]="5"
+          [outerStrokeColor]="'#02459B'"
+          [animation]="true"
+          [animationDuration]="500"
+          [imageSrc]="'../../../assets/images/skills/sql3.png'"
+          [showImage]="true"
+          [imageHeight]="50"
+          [imageWidth]="50"
+        ></circle-progress>
       </li>
     </ul>
 
     <h4 class="display-7 mb-3 mt-5">Más habilidades</h4>
     <ul class="row justify-content-center list-unstyled">
       <li class="col-sm">
-        <img src="../../../assets/images/skills/html.png" alt="" class="sk-img" />
-        <!-- <p class="fs-4 text-center">HTML</p> -->
+        <circle-progress
+          [percent]="70"
+          [radius]="50"
+          [showInnerStroke]="false"
+          [space]="10"
+          [outerStrokeWidth]="5"
+          [outerStrokeColor]="'#F97900'"
+          [animation]="true"
+          [animationDuration]="500"
+          [imageSrc]="'../../../assets/images/skills/html.png'"
+          [showImage]="true"
+          [imageHeight]="50"
+          [imageWidth]="50"
+        ></circle-progress>
       </li>
 
       <li class="col-sm">
-        <img src="../../../assets/images/skills/css.png" alt="" class="sk-img" />
-        <!-- <p class="fs-4 text-center">SCSS/CSS</p> -->
+        <circle-progress
+          [percent]="70"
+          [radius]="50"
+          [showInnerStroke]="false"
+          [space]="10"
+          [outerStrokeWidth]="5"
+          [outerStrokeColor]="'#003EFF'"
+          [animation]="true"
+          [animationDuration]="500"
+          [imageSrc]="'../../../assets/images/skills/css.png'"
+          [showImage]="true"
+          [imageHeight]="50"
+          [imageWidth]="50"
+        ></circle-progress>
       </li>
 
       <li class="col-sm">
-        <img src="../../../assets/images/skills/scss.png" alt="" class="sk-img" />
-        <!-- <p class="fs-4 text-center">SCSS/CSS</p> -->
+        <circle-progress
+          [percent]="60"
+          [radius]="50"
+          [showInnerStroke]="false"
+          [space]="10"
+          [outerStrokeWidth]="5"
+          [outerStrokeColor]="'#F100DF'"
+          [animation]="true"
+          [animationDuration]="500"
+          [imageSrc]="'../../../assets/images/skills/scss.png'"
+          [showImage]="true"
+          [imageHeight]="50"
+          [imageWidth]="50"
+        ></circle-progress>
       </li>
 
       <li class="col-sm">
-        <img src="../../../assets/images/skills/git2.png" alt="" class="sk-img" />
-        <!-- <p class="fs-4 text-center">GIT</p> -->
+        <circle-progress
+          [percent]="70"
+          [radius]="50"
+          [showInnerStroke]="false"
+          [space]="10"
+          [outerStrokeWidth]="5"
+          [outerStrokeColor]="'#FF9700'"
+          [animation]="true"
+          [animationDuration]="500"
+          [imageSrc]="'../../../assets/images/skills/git2.png'"
+          [showImage]="true"
+          [imageHeight]="50"
+          [imageWidth]="50"
+        ></circle-progress>
       </li>
 
       <li class="col-sm">
-        <img src="../../../assets/images/skills/nodejs.png" alt="" class="sk-img" />
-        <!-- <p class="fs-4 text-center">NodeJS</p> -->
+        <circle-progress
+          [percent]="65"
+          [radius]="50"
+          [showInnerStroke]="false"
+          [space]="10"
+          [outerStrokeWidth]="5"
+          [outerStrokeColor]="'#00BB1F'"
+          [animation]="true"
+          [animationDuration]="500"
+          [imageSrc]="'../../../assets/images/skills/nodejs.png'"
+          [showImage]="true"
+          [imageHeight]="50"
+          [imageWidth]="50"
+        ></circle-progress>
       </li>
-
-      <li class="col-sm">
-        <img src="../../../assets/images/skills/spirateam.svg" alt="" class="sk-img" />
-        <!-- <p class="fs-4 text-center">Spirateam</p> -->
-      </li>
-
-      <li class="col-sm">
-        <img src="../../../assets/images/skills/rapise4.png" alt="" class="sk-img" />
-        <!-- <p class="fs-4 text-center">Rapise</p> -->
-      </li>
-
-
     </ul>
   </div>
 </section>
