Correcciones Presentación y Porcentajes habilidades

--- a/src/app/main/about/about.component.html
+++ b/src/app/main/about/about.component.html
@@ -13,13 +13,12 @@
       </div>
       <div class="col-sm-8 mt-3 about-text">
         <p class="fs-4">
-          Hola ! Mi nombre es Pato, soy estudiante de Desarrollo Web Full Stack.
+          Hola ! Mi nombre es Patricio, soy Desarrollo Web (lo intento).
           <br />
           He realizado una Diplomatura en Desarrollador Web Full Stack, una
-          especialización en GIS y varios cursos vinculados al desarrollo
-          web.<br />
-          Actualmente, estoy cursando #YoProgramo en Argentina Programa y el
-          curso de Full Stack con Python en Codo a Codo.<br />
+          especialización en Ciencia de Datos, una Diplomatura en SIG y varios
+          cursos vinculados al desarrollo web. Actualmente, estoy realizando una
+          Diplomatura en SIG.<br />
           Me considero una persona responsable, que busca el continuo
           aprendizaje, comprometida con el trabajo, versátil, dispuesta a
           trabajar en equipo y <strong>apasionada por la programación</strong>
