--- a/src/app/core/components/footer/footer.component.html
+++ b/src/app/core/components/footer/footer.component.html
@@ -7,7 +7,7 @@
         <!-- Facebook -->
         <a
           class="footer-btn btn-floating m-1"
-          style="background-color: #3b5998;"
+          style="background-color: #3b5998"
           href="#!"
           role="button"
           target="_blank"
@@ -17,8 +17,8 @@
         <!-- Whatsapp -->
         <a
           class="footer-btn btn-floating m-1"
-          style="background-color: #3cd93a;"
-          href="https://api.whatsapp.com/send?phone=+542916418967&text=Hola Mundo!"
+          style="background-color: #3cd93a"
+          href="https://api.whatsapp.com/send?phone=+542916418967&text=Hola Patricio! Cómo estás? Vi tu Portfolio Web ..."
           role="button"
           target="_blank"
           ><i class="fab fa-whatsapp"></i
@@ -27,7 +27,7 @@
         <!-- Google -->
         <a
           class="footer-btn btn-floating m-1"
-          style="background-color: #dd4b39;"
+          style="background-color: #dd4b39"
           href="mailto:pagano.patricio@gmail.com"
           role="button"
           target="_blank"
@@ -37,8 +37,8 @@
         <!-- Instagram -->
         <a
           class="footer-btn btn-floating m-1"
-          style="background-color: #ac2bac;"
-          href="#!"
+          style="background-color: #ac2bac"
+          href="https://www.instagram.com/patricio.pagano/"
           role="button"
           target="_blank"
           ><i class="fab fa-instagram"></i
@@ -47,7 +47,7 @@
         <!-- Linkedin -->
         <a
           class="footer-btn btn-floating m-1"
-          style="background-color: #0082ca;"
+          style="background-color: #0082ca"
           href="https://www.linkedin.com/in/patricio-pagano/"
           role="button"
           target="_blank"
@@ -56,7 +56,7 @@
         <!-- Github -->
         <a
           class="footer-btn btn-floating m-1"
-          style="background-color: #333333;"
+          style="background-color: #333333"
           href="https://github.com/ppagano91"
           role="button"
           target="_blank"
@@ -68,10 +68,10 @@
     <!-- Grid container -->
 
     <!-- Copyright -->
-    <div
-      class="text-center p-3"
-    >
-      <a style="text-decoration: none; color:white;" href="https://linkedin.com">Patricio Pagano</a>
+    <div class="text-center p-3">
+      <a style="text-decoration: none; color: white" href="https://linkedin.com"
+        >Patricio Pagano</a
+      >
     </div>
     <!-- Copyright -->
   </footer>
