--- a/src/app/main/contact/contact.component.html
+++ b/src/app/main/contact/contact.component.html
@@ -55,7 +55,7 @@
               ></a>
 
               <a
-                href="https://api.whatsapp.com/send?phone=+542916418967&text=Hola Pato! Vi tu Portfolio en Github"
+                href="https://api.whatsapp.com/send?phone=+542916418967&text=Hola Patricio! Cómo estás? Vi tu Portfolio Web ..."
                 target="_blank"
                 ><i class="fa-brands fa-whatsapp contact-href"></i
               ></a>
@@ -69,7 +69,7 @@
         </div>
       </div>
     </div>
-
+    <!--
     <div class="row">
       <div class="col p-3 shadow mt-3">
         <form name="form" action="#">
@@ -119,6 +119,7 @@
         </form>
       </div>
     </div>
+-->
     <div class="text-center mt-5">
       <a
         class="btn-success btn-lg"
